Add password protection to all pages
- Created password-protection.js with session management
- Added password protection to index.html, mobile.html, and desktop.html
- Password set to 'angel' with 24-hour session duration
- Includes logout functionality and responsive UI
- Professional login screen with error handling

--- a/desktop.html
+++ b/desktop.html
@@ -2191,6 +2191,9 @@
         // Initial event listeners setup
         attachEventListeners();
     </script>
+    
+    <!-- Password Protection -->
+    <script src="password-protection.js"></script>
 </body>
 </html>
 
