--- a/mobile.html
+++ b/mobile.html
@@ -653,5 +653,8 @@
         // Initialize on page load
         updateDynamicAnalysis();
     </script>
+    
+    <!-- Password Protection -->
+    <script src="password-protection.js"></script>
 </body>
 </html>
