--- a/index.html
+++ b/index.html
@@ -211,5 +211,8 @@
             }, 3000);
         });
     </script>
+    
+    <!-- Password Protection -->
+    <script src="password-protection.js"></script>
 </body>
 </html>
