--- a/desktop.html
+++ b/desktop.html
@@ -796,6 +796,10 @@
                         <option value="20">20%</option>
                         <option value="25">25%</option>
                         <option value="30">30%</option>
+                        <option value="40">40%</option>
+                        <option value="50">50%</option>
+                        <option value="25">25%</option>
+                        <option value="30">30%</option>
                     </select>
                 </div>
                 <div class="control">
@@ -816,6 +820,10 @@
                         <option value="12">12%</option>
                         <option value="15">15%</option>
                         <option value="20">20%</option>
+                        <option value="25">25%</option>
+                        <option value="30">30%</option>
+                        <option value="40">40%</option>
+                        <option value="50">50%</option>
                     </select>
                 </div>
                 <div class="control">
