--- a/mobile.html
+++ b/mobile.html
@@ -383,7 +383,7 @@
                         <option value="2">2%</option>
                         <option value="3">3%</option>
                         <option value="4">4%</option>
-                        <option value="5" selected>5%</option>
+                        <option value="5">5%</option>
                         <option value="6">6%</option>
                         <option value="7">7%</option>
                         <option value="8">8%</option>
@@ -394,6 +394,7 @@
                         <option value="20">20%</option>
                         <option value="25">25%</option>
                         <option value="30">30%</option>
+                        <option value="50" selected>50%</option>
                     </select>
                 </div>
                 <div class="control">
@@ -403,7 +404,7 @@
                         <option value="1">1%</option>
                         <option value="1.5">1.5%</option>
                         <option value="2">2%</option>
-                        <option value="2.5" selected>2.5%</option>
+                        <option value="2.5">2.5%</option>
                         <option value="3">3%</option>
                         <option value="4">4%</option>
                         <option value="5">5%</option>
@@ -414,6 +415,7 @@
                         <option value="12">12%</option>
                         <option value="15">15%</option>
                         <option value="20">20%</option>
+                        <option value="50" selected>50%</option>
                     </select>
                 </div>
                 <div class="control">
