--- a/mobile.html
+++ b/mobile.html
@@ -402,8 +402,11 @@
                 <div class="control">
                     <label for="dynamic-loss">Expected Loss %</label>
                     <select id="dynamic-loss">
+                        <option value="0.5">0.5%</option>
                         <option value="1">1%</option>
+                        <option value="1.5">1.5%</option>
                         <option value="2">2%</option>
+                        <option value="2.5">2.5%</option>
                         <option value="3">3%</option>
                         <option value="4">4%</option>
                         <option value="5">5%</option>
